--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <a href="#">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
-            <a href="contact.html">contact</a>
+            <a href="Contact.html">contact</a>
             <a href="buy.html">Buy</a>
             <a href="rent.html">Rent</a>
             <a href="Login.html">Login</a>
