--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
             <a href="about.html">about</a>
             <a href="#">menu</a>
             <a href="review.html">review</a>
-            <a href="contact.html">contact</a>
+            <a href="Contact.html">contact</a>
             <a href="buy.html">Buy</a>
             <a href="rent.html">Rent</a>
             <a href="Login.html">Login</a>
