--- a/rent.html
+++ b/rent.html
@@ -23,7 +23,7 @@
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
-            <a href="contact.html">contact</a>
+            <a href="Contact.html">contact</a>
             <a href="buy.html">Buy</a>
             <a href="#">Rent</a>
             <a href="Login.html">Login</a>
