--- a/review.html
+++ b/review.html
@@ -24,7 +24,7 @@
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="#">review</a>
-            <a href="contact.html">contact</a>
+            <a href="Contact.html">contact</a>
             <a href="buy.html">Buy</a>
             <a href="rent.html">Rent</a>
             <a href="signup.html">Login</a>
