--- a/buy.html
+++ b/buy.html
@@ -23,9 +23,9 @@
             <a href="about.html">about</a>
             <a href="menu.html">menu</a>
             <a href="review.html">review</a>
-            <a href="contact.html">contact</a>
+            <a href="Contact.html">contact</a>
             <a href="#">Buy</a>
-            <a href="Rent.html">Rent</a>
+            <a href="rent.html">Rent</a>
             <a href="Login.html">Login</a>
 
         </nav>
