--- a/menu.html
+++ b/menu.html
@@ -129,7 +129,7 @@
                     through
                     the buy button provided by us.
                 </p>
-                <a href="image/buy.html" class="y3">Buy</a>
+                <a href="buy.html" class="y3">Buy</a>
             </div>
         </div>
         </div>
@@ -144,7 +144,7 @@
                     if you want to spend a warm with your beloved family, you can view many beautiful houses through
                     the rent button provided by us.
                 </p>
-                <a href="buy.html" class="y3">Rent</a>
+                <a href="rent.html" class="y3">Rent</a>
             </div>
             <div class="image">
                 <img src="image/menu2.png" alt="">
